<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.LoginActivity">

    <ProgressBar
        android:id="@+id/pBarLogin"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/loginscrn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/please_sing_in"
            android:textSize="@dimen/size_25sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/fstTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_100dp"
            android:layout_marginTop="@dimen/size_20dp"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_100dp"
            android:text="admin@admin.com"
            android:ems="10"/>
        <TextView
            android:id="@+id/secTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="@dimen/size_100dp" />
        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_100dp"
            android:inputType="textPassword"
            android:text="ad123min"
            android:ems="10" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/login"
            android:onClick="getAuth"/>
        <!--        <TextView android:id="@+id/lnkRegister"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="40dp"-->
        <!--            android:text="@string/create_account"-->
        <!--            android:gravity="center"-->
        <!--            android:textSize="@dimen/standart_size_20_sp"-->
        <!--            android:textColor="#3F51B5"/>-->
    </LinearLayout>

</RelativeLayout>